chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app
spec:
  ingressClassName: nginx
  rules:
  - host: 16.171.3.40
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 3000
      
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8000
      
      # Nginx sert les statics
      - path: /static
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              number: 80
